--- a/templates/room.html
+++ b/templates/room.html
@@ -11,6 +11,7 @@
     <!-- CSS dos Componentes -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/components/video-player.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/components/chat.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/netflix-webview.css') }}">
     
     <!-- Socket.IO -->
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
@@ -569,5 +570,7 @@
     <script src="{{ url_for('static', filename='js/components/video-player.js') }}"></script>
     <script src="{{ url_for('static', filename='js/components/chat.js') }}"></script>
     <script src="{{ url_for('static', filename='js/pages/room.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/components/netflix-webview.js') }}"></script>
+
 </body>
 </html>
