--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -401,5 +401,6 @@
     <script src="{{ url_for('static', filename='js/utils/validators.js') }}"></script>
     <script src="{{ url_for('static', filename='js/utils/helpers.js') }}"></script>
     <script src="{{ url_for('static', filename='js/pages/dashboard.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/components/block.js') }}"></script>
 </body>
 </html>
