--- a/templates/index.html
+++ b/templates/index.html
@@ -273,6 +273,7 @@
     <script src="{{ url_for('static', filename='js/utils/validators.js') }}"></script>
     <script src="{{ url_for('static', filename='js/utils/helpers.js') }}"></script>
     <script src="{{ url_for('static', filename='js/pages/index.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/components/block.js') }}"></script>
     
     <!-- Analytics e Performance (em produção) -->
     <script>
